--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     ports:
       - 5434:5432
     environment:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: 123
-        POSTGRES_DB: nest
+      postgres_user: postgres
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: nest
     networks:
-      - freecodecamp
-  networks:
-    freecodecamp:
+      - muizu
+networks:
+  muizu:
